[tool.poetry]
name = "dagster-llama-pipeline"
version = "0.1.0"
description = ""
authors = ["Bogdan Buduroiu <bogdan@buduroiu.com>"]
readme = "README.md"
packages = [{include = "dagster_llama_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^1.3.14"
pandas = "^2.0.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
dagit = "^1.3.14"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
